Fix Horizontal Scrollbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,15 +1,8 @@
 .container {
-  overflow-x: hidden;
+  // overflow-x: hidden;
 
   // box-shadow: 0 0 30px #1daa1b inset;
-  height: 100%;
+  // height: 100%;
   width: 100%;
   position: relative;
-
-  //
-  #test-pos {
-    height: 20px;
-    width: 20px;
-    background-color: grey;
-  }
 }
