--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -82,7 +82,7 @@
 
     background-color: $background-color;
     opacity: 0.9;
-    height: 100vh;
+    // height: 100%;
     width: 100vw;
   }
 }
