--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -1,7 +1,8 @@
 .container {
   font-family: "Montserrat", sans-serif;
   width: 80vw;
-  margin: 150px auto;
+  margin: 0 auto;
+  padding-top: 15vh;
 
   //
   p {
