--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,8 +30,8 @@ body {
   // background-color: #0e0e0e;
   background-color: $background-color;
   position: relative;
-  height: 100vh;
-  width: 100vw;
+  // height: 100vh;
+  // width: 100vw;
   margin: 0;
   // overflow-x: hidden;
 }
